--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
         <li><a href="#skills"><i class="bi bi-bar-chart navicon"></i><span>Skills</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Projects</span></a></li>
+        <li><a href="#projects"><i class="bi bi-images navicon"></i><span>Projects</span></a></li>
         <li><a href="#services"><i class="bi bi-layers navicon"></i><span>Services</span></a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
