--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>I'm
               <span class="typed"
                 data-typed-items="Computer Science Student, Web Developer, Freelancer, Problem Solver">
-                Computer Science Student
+                Full Stack Developer
               </span>
               <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
             </p>
