--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
             <h2>Ziad Mahmoud</h2>
 
             <!-- الوظائف المتغيرة بالـ Typed.js -->
-            <p>I'm
-              <span class="typed"
-                data-typed-items="Computer Science Student, Web Developer, Freelancer, Problem Solver">
-                Full Stack Developer
-              </span>
-              <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
-            </p>
+       <p>I'm
+  <span class="typed"
+    data-typed-items="Laravel & React Developer, Freelancer, Problem Solver">
+    Full Stack Developer
+  </span>
+  <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
+</p>
 
             <!-- اللينكات بتاعتك -->
             <div class="social-links">
