--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <a href="tel:+201121157987" title="Phone"><i class="bi bi-telephone"></i></a>
               <a href="https://www.linkedin.com/in/ziad-mahmoud-4a1ba5302" target="_blank" title="LinkedIn"><i
                   class="bi bi-linkedin"></i></a>
-              <a href="https://github.com/Ziadmahmoud314" target="_blank" title="GitHub"><i
+              <a href="https://github.com/ziadazza" target="_blank" title="GitHub"><i
                   class="bi bi-github"></i></a>
             </div>
           </div>
