--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <!-- الوظائف المتغيرة بالـ Typed.js -->
        <p>I'm
   <span class="typed"
-    data-typed-items="Full Stack Developer, Laravel & React Developer, Freelancer, Problem Solver">
+    data-typed-items="Full Stack Developer, Laravel | React Developer, Freelancer, Problem Solver">
     Full Stack Developer
   </span>
   <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
