--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
     <section id="hero" class="hero section light-background">
 
       <!-- الخلفية -->
-      <img src="assets/img/hero-bg.jpg" alt="Background">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -701,8 +700,9 @@
 
       </div>
 
-    </section><!-- /Testimonials Section -->
-
+    </section>
+    
+    
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
