--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <div class="resume-item">
               <ul>
                 <li><strong>Languages:</strong> Java, PHP, HTML/CSS, JavaScript, SQL, Python</li>
-                <li><strong>Framework:</strong> Laravel , Bootstrap , React , Talwind</li>
+                <li><strong>Framework:</strong> Laravel , Bootstrap , </li>
               </ul>
             </div><!-- End Resume Item -->
 
