--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>SQL / MySQL</span> <i class="val">75%</i></span>
+              <span class="skill"><span>MySQL</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
