--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
               <p><em>Computer Science student passionate about problem-solving, software development, and building
                   real-world applications with strong technical and analytical skills.</em></p>
               <ul>
-                <li>Alexandria, Egypt</li>
+                <li>El Beheira, Egypt</li>
                 <li>+20 112 115 7987</li>
-                <li>ziad.mahmoud@example.com</li>
-                <li><a href="#">LinkedIn</a> | <a href="#">GitHub</a></li>
+                <li>ziadtayloun@gmail.com</li>
+                <li><a href="https://www.linkedin.com/in/ziad-mahmoud-4a1ba5302">LinkedIn</a> | <a href="https://github.com/ziadazza">GitHub</a></li>
               </ul>
             </div><!-- End Resume Item -->
 
@@ -347,7 +347,7 @@
               <h4>Bachelor of Science in Computer Science</h4>
               <h5>Oct. 2022 – Exp. June 2026</h5>
               <p><em>Faculty of Science, Alexandria University</em></p>
-              <p>GPA: <strong>3.78</strong></p>
+              <p>GPA: <strong>3.82</strong></p>
               <p><strong>Relevant Coursework:</strong></p>
               <ul>
                 <li>Algorithms & Data Structures</li>
